# thesaurus

./: .gitignore  CMakeLists.txt  README.md  test.cc  thesaurus.cc  thesaurus.h
lib/: build.sh
plugin/: thesaurus.vim
src/: thesaurus.cc  thesaurus.h
syntax/: thesaurus.vim
